<resources>
    <string name="app_name">Soroban</string>
    <string name="confirmEventRegistrationText">Confirm registration for \"Event Name\"?</string>
    <string name="unregisterEventText">Unregister from \"Event Name\"?</string>
    <string name="DeclineButtonText">Decline</string>
    <string name="ConfirmButtonText">Confirm</string>
    <string name="usernameText">username</string>
    <string name="firstNameText">First Name</string>
    <string name="lastNameText">Last Name</string>
    <string name="emailAddressText">Email Address</string>
    <string name="phoneNumberText">Phone Number</string>
    <string name="phoneNumberField">+1 780 780 0780</string>
    <string name="firstNameField">John</string>
    <string name="lastNameField">Smith</string>
    <string name="emailAddressField">jsmith@example.com</string>
    <string name="registrationStatusText">Status</string>
    <string name="registrationStatusField">Sample User Status</string>
    <string name="open_nav_drawer">Open Navigation Drawer</string>
    <string name="close_nav_drawer">Close Navigation Drawer</string>

    <string name="lorem_ipsum_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur a orci a felis porta condimentum. Suspendisse convallis lectus quis sapien venenatis, eget faucibus lorem rutrum. Quisque malesuada blandit auctor. Fusce accumsan sed erat a hendrerit. Vivamus eu laoreet augue, vel vehicula purus. Nunc ac lacus id nisl tempor rutrum. Ut convallis lobortis auctor. Donec maximus vestibulum nulla, nec ullamcorper erat auctor fringilla. Vivamus est mauris, commodo quis tempus ut, commodo nec dolor. Nullam eget neque commodo, viverra ante non, facilisis nulla. Duis efficitur eget nisi vel fermentum. Donec metus mi, tempus quis ultrices nec, vehicula ut libero. Phasellus fringilla mattis sapien. Nulla et enim vestibulum, porta magna a, hendrerit orci. Morbi at lorem augue. Fusce eget pulvinar massa.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="drawer_open">Open</string>"
    <string name="drawer_close">Close</string>

    <string name="user_dashboard">User Dashboard</string>
    <string name="organizer_dashboard">Organizer Dashboard</string>
    <string name="admin_dashboard">Admin Dashboard</string>
</resources>