<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/userProfilePhoto"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:padding="16dp"
            android:src="@drawable/ic_profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_firstname"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:text="@string/firstNameText"
                android:textColor="@color/text_secondary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_FirstNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/firstNameField"
                android:textAlignment="textEnd"
                android:textColor="@color/text_secondary"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_lastname"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:text="@string/lastNameText"
                android:textColor="@color/text_secondary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_LastNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/lastNameField"
                android:textAlignment="textEnd"
                android:textColor="@color/text_secondary"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_emailAddress"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:text="@string/emailAddressText"
                android:textColor="@color/text_secondary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_emailAddressField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/emailAddressField"
                android:textAlignment="textEnd"
                android:textColor="@color/text_secondary"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_phoneNumber"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:text="@string/phoneNumberText"
                android:textColor="@color/text_secondary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_phoneNumberField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/phoneNumberField"
                android:textAlignment="textEnd"
                android:textColor="@color/text_secondary"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/adminViewDeviceId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:text="Device ID"
                android:textColor="@color/text_secondary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/userDeviceID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="userDeviceID"
                android:textAlignment="textEnd"
                android:textColor="@color/text_secondary"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/adminViewFacilityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:text="Facility Name"
                android:textColor="@color/text_secondary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/facilityNameAdminTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="facility name"
                android:textAlignment="textEnd"
                android:textColor="@color/text_secondary"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/delete_profile_btn"
        android:layout_width="193dp"
        android:layout_height="46dp"
        android:text="Delete Profile"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>